# brepbuffer

./: CMakeLists.txt  Makefile  README.mkd
applications/: CMakeLists.txt
applications/dumpbrepbuffer/: CMakeLists.txt  DumpBrepBuffer.cpp
brepbuffer/: BrepBufferFile.cpp  BrepBufferFile.h  CMakeLists.txt  Topology.proto  assignVec3Buf.h
include/brepbuffer/: assignVec3Buf.h
protocol/: Geometry.proto  Topology.proto  Vec3.proto
